--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -6,6 +6,8 @@
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.3.1/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
@@ -13,7 +15,8 @@
   <script type="text/javascript" src="src/ccd3.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/ccd3_spec.js"></script>
+  <script type="text/javascript" src="spec/linear-gradient-box_spec.js"></script>
+  <script type="text/javascript" src="spec/helpers_spec.js"></script>
 
   <script type="text/javascript">
     (function() {
