setGradientSvgStops passes all specs

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,9 +14,14 @@
   <!-- include source files here... -->
   <script type="text/javascript" src="src/ccd3.js"></script>
 
+  <!-- include spec helper here --->
+  <script type="text/javascript" src="spec/SpecHelper.js"></script>
+
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/linear-gradient-box_spec.js"></script>
   <script type="text/javascript" src="spec/helpers_spec.js"></script>
+  <script type="text/javascript" src="spec/set-gradient-svg-stops_spec.js"></script>
+
 
   <script type="text/javascript">
     (function() {
