--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="spec/linear-gradient-box_spec.js"></script>
   <script type="text/javascript" src="spec/helpers_spec.js"></script>
   <script type="text/javascript" src="spec/make-gradient-svg-stops_spec.js"></script>
+  <script type="text/javascript" src="spec/linear-gradient_spec.js"></script>
 
 
   <script type="text/javascript">
