--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -21,7 +21,7 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/helpers_spec.js"></script>
-  <script type="text/javascript" src="spec/make-gradient-svg-stops_spec.js"></script>
+  <script type="text/javascript" src="spec/make-stops_spec.js"></script>
   <script type="text/javascript" src="spec/linear-gradient_spec.js"></script>
   <script type="text/javascript" src="spec/add-def_spec.js"></script>
 
